--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root{
     height: 100vh;
     max-width: 100vw;
+    font-family: 'Fira Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
@@ -47,8 +48,12 @@ header{
     background-color: var(--skyblue);
 }
 
-header>h1{
+h1{
     font-size: 3rem;
+}
+
+h2{
+    font-size: 1.5rem;
 }
 
 /*---------------------
@@ -56,14 +61,15 @@ Cards styling section:
 ---------------------*/
 main{
     flex-grow: 1;
+    margin-top: 5rem;
 }
 
 .card-container{
     display: grid;
-    height: 20rem;
-    width: 60%;
+    height: max(45%, 32rem);
+    width: max(25%,23rem);
     grid-template-columns: repeat(3,1fr);
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .card{
@@ -71,11 +77,13 @@ main{
     height: 100%;
     display: flex;
     flex: 1;
-    font-size: 2rem;
+    font-size: 5rem;
+    font-weight: 600;
     justify-content: center;
     align-items: center;
     background-color: var(--melon);
-    color: var(--moonstone);
+    color: var(--hotpink);
+    border-radius: 5px;
 }
 
 
@@ -84,4 +92,5 @@ Footer section:
 ---------------------*/
 footer{
     background-color: var(--yellowpeach);
+    height: 2.5rem;
 }
