--- a/style.css
+++ b/style.css
@@ -31,7 +31,9 @@ CSS Vars - colors:
     --melon: #F9B9B7;
     --hotpink: #F06C9B;
     --yellowpeach: #F5D491;
+    --papaya: #ff9a80;
     --skyblue: #96C9DC;
+    --mineralwater: #dcf6ff;
     --moonstone: #61A0AF;
 
 }
@@ -69,7 +71,7 @@ main{
     height: max(45%, 32rem);
     width: max(25%,23rem);
     grid-template-columns: repeat(3,1fr);
-    gap: 0.5rem;
+    gap: 10px;
 }
 
 .card{
@@ -78,7 +80,7 @@ main{
     display: flex;
     flex: 1;
     font-size: 5rem;
-    font-weight: 600;
+    font-weight: 500;
     justify-content: center;
     align-items: center;
     background-color: var(--melon);
@@ -86,6 +88,117 @@ main{
     border-radius: 5px;
 }
 
+
+/*-------------
+Modal Styling:
+------------*/
+.modal{
+    /*display: none;*/
+    position: fixed;
+    z-index: 0;
+    left: 0;
+    top: 0;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.356);
+}
+
+.modal>.modal-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: max(22%,22rem);
+    height: 45%;
+    margin: 15vh auto;
+    padding: 1rem;
+    border: 1px solid rgba(136, 136, 136, 0.064);
+    border-radius: 15px;
+    background-color: var(--skyblue);
+}
+
+.modal-content>.forms-container{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    flex-grow: 1;
+    align-items: center;
+}
+
+.forms-container>form{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    min-height: 70%;
+    justify-content: space-evenly;
+    align-items: center;
+    align-self: flex-start;
+    gap: 20px;
+}
+
+#player-1-name, #player-2-name{
+    width: 70%;
+    font-size: 2rem;
+    border-radius: 8px;
+    border: 2px solid white;
+    background-color: var(--hotpink);
+    color: var(--melon);
+}
+
+
+h2.modal-header{
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    font-weight: 600;
+    color: white;
+    text-shadow: 3px 3px var(--hotpink);
+}
+
+h2.player-sign{
+    font-size: 4.5rem;
+    font-weight: 900;
+    color: var(--hotpink);
+}
+
+.form-btn{
+    height: 2.5rem;
+    font-size: 1.8rem;
+    border-radius: 8px;
+    border: 2px solid white;
+    background-color: var(--moonstone);
+    color: var(--mineralwater);
+    box-shadow: 5px 5px white;
+    transition: 0.5s;
+}
+
+.form-btn:hover{
+    transform: translate(2px,1px);
+    box-shadow: 3px 3px white;
+    filter: brightness(130%);
+}
+
+.form-btn:active{
+    
+    transform: translate(3px,3px);
+    background: white;
+    color: var(--moonstone);
+    box-shadow: 1px 1px var(--moonstone);
+    opacity: 0.8;
+}
+
+.play-btn{
+    height: 4rem;
+    width: 8rem;
+    margin-bottom: 1.5rem;
+    justify-self: flex-start;
+}
+
+div.line-break{
+    height: 90%;
+    border-right: 5px dashed white;
+    align-self: flex-start;
+    margin-top: 5px;
+}
 
 /*---------------------
 Footer section: 
