--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
     flex-direction: column;
     box-sizing: border-box;
     align-items: center;
-    background-color: var(--hotpink);
+    background: rgb(249,185,183);
+    background: linear-gradient(180deg, rgba(249,185,183,1) 0%, rgba(240,108,155,1) 54%, rgba(212,0,143,1) 100%);
 }
 
 main,footer{
@@ -24,8 +25,6 @@ main,footer{
 CSS Vars - colors:
 --------------------*/
 :root{
-    --graphite: #27272a;
-    --hard-graphite: #18181b;
     --stone: #525252;
     --light-stone: #a8a29e;
     --melon: #F9B9B7;
@@ -145,6 +144,7 @@ Modal Styling:
     background-color: var(--skyblue);
     color: var(--hotpink);
     text-shadow: 2px 2px white;
+    text-align: center;
 }
 
 
@@ -161,6 +161,10 @@ h3.modal-header{
     font-size: 1.2rem;
 }
 
+.modal-header,.player-sign{
+    cursor:default;
+}
+
 h2.player-sign{
     font-size: 4.5rem;
     font-weight: 900;
@@ -174,8 +178,9 @@ h2.player-sign{
     border: 2px solid white;
     background-color: var(--moonstone);
     color: var(--mineralwater);
-    box-shadow: 5px 5px white;
+    box-shadow: 4px 5px white;
     transition: 0.5s;
+    cursor: pointer;
 }
 
 .form-btn:hover{
