--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ Modal Styling:
     font-size: 2rem;
     font-weight: 700;
     border-radius: 8px;
-    border: none;
+    border: 2px solid white;
     background-color: var(--skyblue);
     color: var(--hotpink);
     text-shadow: 2px 2px white;
