--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ main{
 
 .card{
     width: 100%;
-    height: 100%;
+    height: 10.3rem;
     display: flex;
     flex: 1;
     font-size: 5rem;
@@ -142,7 +142,7 @@ Modal Styling:
     font-size: 2rem;
     font-weight: 700;
     border-radius: 8px;
-    border: 2px solid white;
+    border: none;
     background-color: var(--skyblue);
     color: var(--hotpink);
     text-shadow: 2px 2px white;
