--- a/style.css
+++ b/style.css
@@ -147,6 +147,8 @@ Modal Styling:
     color: var(--hotpink);
     text-shadow: 2px 2px white;
     text-align: center;
+    text-decoration: dashed underline 5px white;
+    text-underline-offset: 6px;
 }
 
 .player-container{
@@ -224,6 +226,23 @@ div.line-break{
 /*--------------------
 Scoreboard styling:
 --------------------*/
+
+.main-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+}
+
+.main-header>h2{
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--mineralwater);
+    text-shadow: var(--skyblue) 3px 4px;
+}
+
 .scoreboard-container{
     width: 100%;
     display: flex;
