--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ CSS Vars - colors:
 
 }
 
-
 /*---------------------
 Header section: 
 ---------------------*/
@@ -78,7 +77,7 @@ main{
 
 .card{
     width: 100%;
-    height: 10.3rem;
+    height: 12.3rem;
     display: flex;
     flex: 1;
     font-size: 5rem;
@@ -113,7 +112,8 @@ Modal Styling:
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: max(22%,22rem);
+    justify-content: space-between;
+    width: max(20%,20rem);
     height: 45%;
     margin: 15vh auto;
     padding: 1rem;
@@ -126,8 +126,9 @@ Modal Styling:
     display: flex;
     justify-content: space-between;
     width:100%;
-    flex-grow: 1;
+    height: 65%;
     align-items: center;
+    margin-top: 15px;
 }
 
 .form-container>form{
@@ -138,24 +139,22 @@ Modal Styling:
 }
 
 #player-1-name, #player-2-name{
-    width: 100%;
+    width: 90%;
     font-size: 2rem;
     font-weight: 700;
     border-radius: 8px;
     border: none;
     background-color: var(--skyblue);
     color: var(--hotpink);
-    text-shadow: 2px 2px white;
+    text-shadow: 3px 3px white;
     text-align: center;
-    text-decoration: dashed underline 5px white;
-    text-underline-offset: 6px;
 }
 
 .player-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    gap: 4rem;
 }
 
 
@@ -163,7 +162,7 @@ Modal Styling:
     font-size: 2rem;
     font-weight: 600;
     color: white;
-    text-shadow: 3px 3px var(--hotpink);
+    text-shadow: 4px 4px var(--hotpink);
 }
 
 h3.modal-header{
@@ -236,13 +235,6 @@ Scoreboard styling:
 
 }
 
-.main-header>h2{
-    font-size: 2rem;
-    font-weight: 600;
-    color: var(--mineralwater);
-    text-shadow: var(--skyblue) 3px 4px;
-}
-
 .scoreboard-container{
     width: 100%;
     display: flex;
@@ -266,3 +258,41 @@ footer{
     background-color: var(--yellowpeach);
     height: 2.5rem;
 }
+
+
+/*---------------------
+media queries: 
+---------------------*/
+
+@media only screen and (max-width: 600px) {
+    .card{
+        width: 97%;
+        max-height: 90%;
+    }
+
+    .modal>.modal-content{
+        width: 80%;
+        height: 26rem;
+    }
+
+    h2.modal-header{
+        font-size: 24px;
+    }
+    
+    #player-1-name, #player-2-name{
+        font-size: 1.5rem;
+    } 
+
+    .card-container,.scoreboard-container{
+        margin-top: 15px;
+    }
+
+    .player-card,.player-card>*{
+        font-size: 1.5rem;
+        height: 3rem;
+    }
+
+    main{
+        margin: 0;
+    }
+  }
