--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -25,13 +25,9 @@ main,footer{
 CSS Vars - colors:
 --------------------*/
 :root{
-    --stone: #525252;
-    --light-stone: #a8a29e;
     --melon: #F9B9B7;
     --hotpink: #F06C9B;
     --transparent-pink: #f06c9a9f;
-    --yellowpeach: #F5D491;
-    --papaya: #ff9a80;
     --skyblue: #96C9DC;
     --mineralwater: #dcf6ff;
     --moonstone: #61A0AF;
@@ -78,8 +74,9 @@ h2{
 Cards styling section: 
 ---------------------*/
 main{
-    flex-grow: 1;
-    margin-top: 2rem;
+    flex: 1;
+    min-height: 100%;
+    margin-top: 1rem;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -87,7 +84,7 @@ main{
 
 .card-container{
     display: grid;
-    height: max(45%, 32rem);
+    height: 100%;
     width: max(25%,23rem);
     grid-template-columns: repeat(3,1fr);
     gap: 10px;
@@ -95,7 +92,7 @@ main{
 
 .card{
     width: 100%;
-    height: 12.3rem;
+    height: 10rem;
     display: flex;
     flex: 1;
     font-size: 6rem;
@@ -171,6 +168,7 @@ Modal Styling:
     color: var(--hotpink);
     text-shadow: 3px 3px white;
     text-align: center;
+    text-decoration: solid underline white;
 }
 
 .player-container{
@@ -189,12 +187,11 @@ Modal Styling:
 }
 
 h2#scoreboard-header{
-    margin-bottom: 0.6rem;
-    border-bottom: 3px solid rgba(255, 255, 255, 0.514);
-    color: rgba(255, 255, 255, 0.716);
-    font-size: 1.7rem;
-    font-weight: 600;
-    letter-spacing: 5px;
+    margin: 2px;
+    color: rgba(255, 255, 255, 0.429);
+    font-size: 1.5rem;
+    font-weight: 400;
+    letter-spacing: 8px;
 }
 
 h3.modal-header{
@@ -281,7 +278,7 @@ Scoreboard styling:
 .player-card{
     display: flex;
     flex-direction: column;
-    height: 5rem;
+    height: 4rem;
     align-items: center;
     justify-content: space-around;
 }
@@ -294,9 +291,14 @@ media queries:
     header{
         display: none;
     }
+
+    main{
+        margin: 0;
+    }
+    
     .card{
         width: 97%;
-        max-height: 90%;
+        height: 20vh;
     }
 
     .modal>.modal-content{
@@ -315,10 +317,6 @@ media queries:
     .player-card,.player-card>*{
         font-size: 1.5rem;
         height: 3rem;
-    }
-
-    main{
-        margin: 0;
     }
 
     .main-header{
