--- a/style.css
+++ b/style.css
@@ -168,7 +168,6 @@ Modal Styling:
     color: var(--hotpink);
     text-shadow: 3px 3px white;
     text-align: center;
-    text-decoration: solid underline white;
 }
 
 .player-container{
@@ -281,6 +280,15 @@ Scoreboard styling:
     height: 4rem;
     align-items: center;
     justify-content: space-around;
+    width: 25%;
+}
+
+.player-card>h2{
+    font-size: 1.2rem;
+    width: 100%;
+    height: 30%;
+    text-overflow: ellipsis;
+    overflow: hidden; 
 }
 
 /*---------------------
@@ -295,7 +303,7 @@ media queries:
     main{
         margin: 0;
     }
-    
+
     .card{
         width: 97%;
         height: 20vh;
@@ -316,7 +324,6 @@ media queries:
 
     .player-card,.player-card>*{
         font-size: 1.5rem;
-        height: 3rem;
     }
 
     .main-header{
