--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ main{
 
 .card-container{
     display: grid;
-    height: 100%;
-    width: max(25%,23rem);
+    height: max(60vh,100%);
+    width: max(23%,22rem);
     grid-template-columns: repeat(3,1fr);
     gap: 10px;
 }
@@ -95,7 +95,7 @@ main{
     height: 10rem;
     display: flex;
     flex: 1;
-    font-size: 6rem;
+    font-size: 4.5rem;
     font-weight: 500;
     justify-content: center;
     align-items: center;
