--- a/style.css
+++ b/style.css
@@ -110,6 +110,12 @@ main{
     cursor: default;
 }
 
+.card.won{
+    transition: 0.6s;
+    filter:saturate(1.7);
+    color: var(--skyblue);
+}
+
 /*-------------
 Modal Styling:
 ------------*/
