--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ main{
 /*-------------
 Modal Styling:
 ------------*/
-.modal{
+.modal,.round-modal{
     position: fixed;
     z-index: 0;
     left: 0;
@@ -296,6 +296,7 @@ Scoreboard styling:
     height: 35%;
     text-overflow: ellipsis;
     overflow: hidden; 
+    text-align: center;
 }
 
 /*---------------------
